# athletic-podscraper

./: .bumpversion.cfg  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  log.txt  main.py  pyproject.toml
core/: __init__.py  logger.py  podcasts.py  scraper.py
core/webdriver/: builder.py
scraper/: main.py  notes.md  pyproject.toml
scraper/athletic_scraper/: __init__.py  logger.py  podcasts.py
scraper/athletic_scraper/webdriver/: builder.py
scraper/core/: __init__.py  models.py  podcasts.py
scraper/tests/unit/: test_webdriver.py
tests/fixtures/: fixt_homepage.py  fixt_podcast_page.py
tests/integration/: test_integration.py
tests/unit/: test_scraper.py  test_webdriver.py
